js/js.translator/testData/incremental/invalidation/constVals/lib1/l1.3.kt
private const val BAR = 2

const val FOO = 1 + BAR
